--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DeviceRegistrationActivity"></activity>
+        <activity android:name=".JoinNickActivity"></activity>
+        <activity android:name=".JoinActivity" />
+        <activity android:name=".DeviceRegistrationActivity" />
         <activity android:name=".AuthenticationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
